supress warnings and fix CSS to prevent table from covering header

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -89,12 +89,13 @@
   left: 0;
   top: 0;
   width: 100%;
-  z-index: 200;
+  z-index: 900;
 }
 
 @media (max-width: 767px), screen and (max-width: 812px) and (orientation: landscape) {
   .header {
     padding: 10px 0;
+    z-index: 900;
   }
 }
 
